--- a/package.json
+++ b/package.json
@@ -6,14 +6,21 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.0",
     "bluebird": "^3.5.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
+    "joi": "^13.6.0",
+    "jsonwebtoken": "^8.3.0",
     "morgan": "~1.9.0",
+    "multer": "^1.3.1",
     "mysql2": "^1.6.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^4.38.0"
   }
 }
